--- a/style.css
+++ b/style.css
@@ -202,21 +202,21 @@ label {
   color: #fff;
   border-color: #E58D35;
   border-radius: 90px;
-  padding: 12px 24px;
+  padding: 12px 27px;
 }
 .btn:hover {
   background-color: transparent;
   border-color: #E58D35;
 }
 .btn.btn-sm {
-  padding: 14px 21px;
+  padding: 12px 18px;
 }
 .btn.btn-lg {
   font-size: 16px;
-  padding: 20px 23px 19px 33px;
+  padding: 19px 21px 19px 33px;
 }
 .btn.btn-lg img {
-  margin-left: 49px;
+  margin-left: 48px;
 }
 .btn.btn-secondary {
   background-color: transparent;
@@ -336,6 +336,7 @@ label {
 
 .navbar {
   padding: 25px 0 40px;
+  white-space: nowrap;
 }
 
 .navbar-nav {
