--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ html {
 
 body {
   font-family: "ProximaNova";
-  background-color: #282B38;
+  background-color: #282b38;
   color: #fff;
   line-height: 1.3;
 }
@@ -60,7 +60,12 @@ section {
   margin-bottom: 100px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 700;
 }
 
@@ -114,13 +119,13 @@ input[type=checkbox] {
   display: none;
 }
 input[type=checkbox] + label:hover:before {
-  border-color: #E58D35;
+  border-color: #e58d35;
 }
 
 input[type=checkbox] + label:before {
   content: "";
   background-color: #fff;
-  border: 1px solid #282B38;
+  border: 1px solid #282b38;
   position: absolute;
   width: 24px;
   height: 24px;
@@ -141,7 +146,7 @@ input {
   padding: 18px 20px;
   border: none;
   transition: 0.3s;
-  color: #282B38;
+  color: #282b38;
 }
 input:focus-visible {
   outline: none;
@@ -153,7 +158,7 @@ input:focus {
   box-shadow: 0px 0px 4px 2px rgba(137, 194, 73, 0.6666666667);
 }
 input:active {
-  box-shadow: 0px 0px 5px 3px #89C249;
+  box-shadow: 0px 0px 5px 3px #89c249;
 }
 input[type=file] {
   display: none;
@@ -172,12 +177,33 @@ input[type=file] + label:hover {
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%2389C249' stroke-width='2' stroke-dasharray='3px%2c 6px ' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
 }
 input::placeholder {
-  color: #CBCBCB;
+  color: #cbcbcb;
 }
 
 label {
   cursor: pointer;
   margin-bottom: 6px;
+}
+
+.bg-accent {
+  position: relative;
+  padding: 90px 0 100px;
+}
+.bg-accent .container {
+  max-width: 1364px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+.bg-accent::before {
+  content: "";
+  position: absolute;
+  inset: 0 50px;
+  background-color: #363a4d;
+  max-width: 1820px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  z-index: -1;
 }
 
 .fw-300 {
@@ -198,15 +224,15 @@ label {
 
 .btn {
   font-size: 15px;
-  background-color: #E58D35;
+  background-color: #e58d35;
   color: #fff;
-  border-color: #E58D35;
+  border-color: #e58d35;
   border-radius: 90px;
   padding: 12px 27px;
 }
 .btn:hover {
   background-color: transparent;
-  border-color: #E58D35;
+  border-color: #e58d35;
 }
 .btn.btn-sm {
   padding: 12px 18px;
@@ -222,13 +248,14 @@ label {
   background-color: transparent;
 }
 .btn.btn-secondary:hover {
-  background-color: #E58D35;
+  background-color: #e58d35;
 }
 .btn.btn-primary {
-  background-color: #E58D35;
+  background-color: #e58d35;
+  margin-left: 50px;
 }
 .btn.btn-primary:hover {
-  background-color: #E58D35;
+  background-color: #e58d35;
 }
 
 .template-title {
@@ -245,7 +272,7 @@ label {
   position: absolute;
   width: 85px;
   height: 2px;
-  background-color: #E58D35;
+  background-color: #e58d35;
   bottom: 54px;
   left: 50%;
   transform: translateX(-50%);
@@ -306,7 +333,7 @@ label {
 }
 
 .nice-select {
-  color: #282B38;
+  color: #282b38;
   height: 55px;
   border-radius: 10px;
   font-size: 15px;
@@ -323,7 +350,7 @@ label {
 .nice-select .option:hover,
 .nice-select .option.focus,
 .nice-select .option.selected.focus {
-  background-color: #89C249;
+  background-color: #89c249;
 }
 
 .file-name {
@@ -350,7 +377,7 @@ label {
   color: #fff;
 }
 .nav-link:hover {
-  color: #E58D35;
+  color: #e58d35;
 }
 
 .hamburger {
@@ -389,7 +416,7 @@ label {
 }
 .swiper-banner .swiper-slide {
   min-height: 700px;
-  background-color: #363A4D;
+  background-color: #363a4d;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -399,34 +426,15 @@ label {
   padding-top: 163px;
   padding-bottom: 73px;
 }
-.swiper-banner .swiper-pagination-bullet {
-  width: 8px;
-  height: 8px;
-  border: 2px solid #fff;
-  background-color: transparent;
-  opacity: 1;
-  cursor: pointer;
-}
-.swiper-banner .swiper-pagination-bullet-active {
-  background-color: #fff;
-}
-.swiper-banner .swiper-horizontal > .swiper-pagination-bullets, .swiper-banner .swiper-pagination-bullet,
-.swiper-banner .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: var(--swiper-pagination-bottom, 13px);
-}
-.swiper-banner .swiper-horizontal > .swiper-pagination-bullets,
-.swiper-banner .swiper-pagination-bullets.swiper-pagination-horizontal {
-  top: calc(100% - 59px);
-}
 .swiper-banner .swiper-banner-arrow {
-  --padding: 36px;
+  --padding: 20px;
   position: absolute;
-  height: 46px;
-  top: 50%;
+  top: calc(50% - 23px);
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: calc(1503px + var(--padding) * 2);
+  height: 0;
   z-index: 1;
   padding: 0 var(--padding);
   display: flex;
@@ -439,7 +447,11 @@ label {
 }
 .swiper-banner .swiper-button-next:hover,
 .swiper-banner .swiper-button-prev:hover {
-  color: #89C249;
+  color: #89c249;
+}
+.swiper-banner .swiper-horizontal > .swiper-pagination-bullets,
+.swiper-banner .swiper-pagination-bullets.swiper-pagination-horizontal {
+  top: calc(100% - 59px);
 }
 
 .banner-title {
@@ -449,6 +461,7 @@ label {
   margin-bottom: 10px;
   max-width: 465px;
   line-height: 1.26;
+  padding-left: 50px;
 }
 
 .banner-description {
@@ -457,6 +470,25 @@ label {
   font-weight: 300;
   margin-bottom: 37px;
   line-height: 1.36;
+  padding-left: 50px;
+}
+
+.swiper-pagination-bullet {
+  width: 8px;
+  height: 8px;
+  border: 2px solid #fff;
+  background-color: transparent;
+  opacity: 1;
+  cursor: pointer;
+}
+.swiper-pagination-bullet-active {
+  background-color: #fff;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 0 var(--swiper-pagination-bottom, 13px);
 }
 
 .calculation .template-title {
@@ -468,7 +500,7 @@ label {
 
 .calculation-form {
   max-width: 626px;
-  background: #363A4D;
+  background: #363a4d;
   border-radius: 20px;
   padding: 50px 50px 60px;
   font-size: 15px;
@@ -480,6 +512,49 @@ label {
   left: 610px;
 }
 
+.advantages .swiper-pagination {
+  position: static;
+}
+
+.advantage {
+  text-align: center;
+}
+
+.advantage__img-box {
+  width: 113px;
+  height: 113px;
+  border: 1px solid #6c7188;
+  margin: 0 auto 22px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.advantage__img-box:before {
+  content: "";
+  position: absolute;
+  inset: 10px;
+  background-color: #89c249;
+  border-radius: 50%;
+  z-index: -1;
+}
+
+.advantage__title {
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.advantages-horizontal > .swiper-pagination-bullets,
+.advantages-pagination-bullets.swiper-pagination-horizontal {
+  top: calc(100% - 59px);
+}
+
+.card {
+  background-color: #363a4d;
+}
+
 @media (min-width: 992px) {
   .swiper-banner {
     width: calc(100% - 24px);
@@ -487,10 +562,15 @@ label {
   .swiper-banner .swiper-slide {
     border-radius: 20px;
   }
+  .advantages .swiper-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 48px 24px;
+  }
 }
-@media (min-width: 1400px) {
+@media screen and (max-width: 1399.98px) {
   .swiper-banner .swiper-slide .container {
-    padding: 163px 72px 73px;
+    padding: 132px 72px 73px;
   }
 }
 @media screen and (max-width: 1199.98px) {
@@ -499,6 +579,9 @@ label {
   }
   .calculation-img {
     width: 35vw;
+  }
+  .bg-accent::before {
+    inset: 0 12px;
   }
 }
 @media screen and (max-width: 991.98px) {
@@ -509,7 +592,7 @@ label {
     padding: 17px 0 15px;
   }
   .navbar-collapse {
-    background-color: #363A4D;
+    background-color: #363a4d;
     margin: 0 -12px;
     padding: 0px 40px;
     text-align: center;
@@ -531,7 +614,27 @@ label {
     line-height: 222%;
   }
   .nav-link:hover {
-    color: #E58D35;
+    color: #e58d35;
+  }
+  .template-title.template-title_case-3 {
+    text-align: center;
+    max-width: 100%;
+    padding-bottom: 70px;
+  }
+  .template-title.template-title_case-3 h2:after {
+    content: "";
+    position: absolute;
+    width: 85px;
+    height: 2px;
+    border-color: #e58d35;
+    bottom: 54px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0;
+  }
+  .bg-accent::before {
+    border-radius: 0;
+    inset: 0;
   }
   .container {
     padding-left: 20px;
@@ -573,6 +676,18 @@ label {
   }
   .input-box_checkbox:first-child {
     margin-top: 6px;
+  }
+  .template-title h2 {
+    font-size: 24px;
+  }
+  .swiper-horizontal > .swiper-pagination-bullets,
+  .swiper-pagination-bullet,
+  .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 0 var(--swiper-pagination-bottom, 8px);
+  }
+  .advantage__title {
+    min-width: 218px;
+    margin-bottom: 0 auto 40px;
   }
 }
 @media screen and (max-width: 767.98px) {
