--- a/style.css
+++ b/style.css
@@ -89,24 +89,25 @@ select {
   display: none;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+input::-webkit-outer-spin-button, textarea::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button,
+textarea::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-input[type=number] {
+input[type=number], textarea[type=number] {
   -moz-appearance: textfield;
 }
 
-input[type=checkbox] {
+input[type=checkbox], textarea[type=checkbox] {
   display: none;
 }
-input[type=checkbox] + label:hover:before {
+input[type=checkbox] + label:hover:before, textarea[type=checkbox] + label:hover:before {
   border-color: #e58d35;
 }
 
-input[type=checkbox] + label:before {
+input[type=checkbox] + label:before, textarea[type=checkbox] + label:before {
   content: "";
   background-color: #fff;
   border: 1px solid #282b38;
@@ -118,12 +119,12 @@ input[type=checkbox] + label:before {
   border-radius: 4px;
 }
 
-input[type=checkbox]:checked + label:before {
+input[type=checkbox]:checked + label:before, textarea[type=checkbox]:checked + label:before {
   content: "";
   background: url(assets/img/icon-checked.png) center no-repeat #fff;
 }
 
-input {
+input, textarea {
   background-color: #fff;
   font-size: 15px;
   border-radius: 10px;
@@ -132,22 +133,22 @@ input {
   transition: 0.3s;
   color: #282b38;
 }
-input:focus-visible {
+input:focus-visible, textarea:focus-visible {
   outline: none;
 }
-input:hover {
+input:hover, textarea:hover {
   box-shadow: 0px 0px 4px 2px rgba(229, 141, 53, 0.6666666667);
 }
-input:focus {
+input:focus, textarea:focus {
   box-shadow: 0px 0px 4px 2px rgba(137, 194, 73, 0.6666666667);
 }
-input:active {
+input:active, textarea:active {
   box-shadow: 0px 0px 5px 3px #89c249;
 }
-input[type=file] {
+input[type=file], textarea[type=file] {
   display: none;
 }
-input[type=file] + label {
+input[type=file] + label, textarea[type=file] + label {
   text-align: center;
   padding: 12px 12px;
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%23fff' stroke-width='2' stroke-dasharray='8px%2c 10px ' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
@@ -157,11 +158,18 @@ input[type=file] + label {
   background-size: calc(100% - 1px) calc(100% - 1px);
   margin-bottom: 2px;
 }
-input[type=file] + label:hover {
+input[type=file] + label:hover, textarea[type=file] + label:hover {
   background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%2389C249' stroke-width='2' stroke-dasharray='3px%2c 6px ' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
 }
-input::placeholder {
+input::placeholder, textarea::placeholder {
   color: #cbcbcb;
+}
+
+textarea {
+  min-height: 55px;
+  height: 70px;
+  max-height: 160px;
+  margin-bottom: 26px;
 }
 
 label {
@@ -667,6 +675,87 @@ label {
   width: 100%;
 }
 
+.questions__row {
+  display: flex;
+  gap: 34px;
+}
+
+.questions-form__title {
+  font-size: 24px;
+  margin-bottom: 8px;
+}
+
+.questions-form {
+  border-radius: 20px;
+  background-color: #363a4d;
+  padding: 38px 40px;
+  min-width: 390px;
+}
+.questions-form .btn-lg {
+  padding: 20px 20px 19px;
+}
+.questions-form .btn-lg .arrow-left {
+  margin-left: 130px;
+}
+
+.input-box {
+  margin-bottom: 14px;
+}
+
+.questions-form__subtitle {
+  font-size: 17px;
+  font-weight: 300;
+  margin-bottom: 23px;
+}
+
+.questions .accordion {
+  width: 100%;
+  min-width: 716px;
+}
+.questions .accordion .accordion-item {
+  background-color: transparent;
+  border: 1px solid #3a444e;
+  margin-bottom: 16px;
+  border-radius: 10px;
+}
+.questions .accordion .accordion-button {
+  background-color: transparent;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 700;
+  box-shadow: none;
+  padding: 21px 19px 21px 34px;
+  border-radius: 10px;
+}
+.questions .accordion .accordion-button::after {
+  width: 27px;
+  height: 27px;
+  background-size: contain;
+  background-image: url("data:image/svg+xml,%3Csvg width='27' height='27' viewBox='0 0 27 27' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_49)'%3E%3Cpath d='M0.421875 13.5C0.421875 6.27539 6.27539 0.421875 13.5 0.421875C20.7246 0.421875 26.5781 6.27539 26.5781 13.5C26.5781 20.7246 20.7246 26.5781 13.5 26.5781C6.27539 26.5781 0.421875 20.7246 0.421875 13.5ZM13.5 24.8906C19.7596 24.8906 24.8906 19.8229 24.8906 13.5C24.8906 7.24043 19.8229 2.10938 13.5 2.10938C7.24043 2.10938 2.10938 7.17715 2.10938 13.5C2.10938 19.7596 7.17715 24.8906 13.5 24.8906ZM14.1592 20.0127L20.2289 13.9482C20.4768 13.7004 20.4768 13.2996 20.2289 13.0518L14.1592 6.9873C13.9113 6.73945 13.5105 6.73945 13.2627 6.9873L12.8988 7.35117C12.651 7.59902 12.651 8.01035 12.9094 8.25293L17.4182 12.6035H7.38281C7.03477 12.6035 6.75 12.8883 6.75 13.2363V13.7637C6.75 14.1117 7.03477 14.3965 7.38281 14.3965H17.4182L12.9041 18.7471C12.651 18.9949 12.6457 19.401 12.8936 19.6488L13.2574 20.0127C13.5105 20.2605 13.9113 20.2605 14.1592 20.0127Z' fill='white'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_49'%3E%3Crect width='27' height='27' fill='white' transform='matrix(-1 0 0 1 27 0)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+}
+.questions .accordion .accordion-button::after:active {
+  background-color: #ffffff;
+}
+.questions .accordion .accordion-button:not(.collapsed)::after {
+  width: 27px;
+  height: 27px;
+  background-image: url("data:image/svg+xml,%3Csvg width='27' height='27' viewBox='0 0 27 27' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.5 26.5781C6.27539 26.5781 0.421874 20.7246 0.421874 13.5C0.421875 6.27539 6.27539 0.421875 13.5 0.421876C20.7246 0.421876 26.5781 6.27539 26.5781 13.5C26.5781 20.7246 20.7246 26.5781 13.5 26.5781ZM24.8906 13.5C24.8906 7.24043 19.8229 2.10938 13.5 2.10938C7.24043 2.10938 2.10937 7.17715 2.10937 13.5C2.10937 19.7596 7.17715 24.8906 13.5 24.8906C19.7596 24.8906 24.8906 19.8229 24.8906 13.5ZM20.0127 12.8408L13.9482 6.77109C13.7004 6.52324 13.2996 6.52324 13.0518 6.77109L6.9873 12.8408C6.73945 13.0887 6.73945 13.4895 6.9873 13.7373L7.35117 14.1012C7.59902 14.349 8.01035 14.349 8.25293 14.0906L12.6035 9.58184L12.6035 19.6172C12.6035 19.9652 12.8883 20.25 13.2363 20.25L13.7637 20.25C14.1117 20.25 14.3965 19.9652 14.3965 19.6172L14.3965 9.58184L18.7471 14.0959C18.9949 14.349 19.401 14.3543 19.6488 14.1064L20.0127 13.7426C20.2605 13.4895 20.2605 13.0887 20.0127 12.8408Z' fill='%23E58D35'/%3E%3C/svg%3E");
+  transform: rotate(360deg);
+}
+
+.accordion-body {
+  background-color: #ffffff;
+  padding: 21px 80px 21px 34px;
+  border-radius: 10px;
+}
+.accordion-body .accordion-description {
+  color: #282b38;
+  font-size: 17px;
+  font-weight: 300;
+  font-family: "ProximaNova";
+  margin: 0;
+}
+
 @media (min-width: 992px) {
   .swiper-banner {
     width: calc(100% - 24px);
@@ -807,6 +896,7 @@ label {
   .company .container {
     align-items: center;
     flex-direction: column;
+    gap: 25px;
   }
   .company .container .company-description {
     width: 100%;
@@ -819,6 +909,16 @@ label {
   }
   .company .container .company-img {
     max-width: 450px;
+  }
+  .company .container .paragraph-1 {
+    margin: 0 0 30px;
+  }
+  .company .container .paragraph-2 {
+    margin: 0;
+  }
+  .questions__row {
+    flex-direction: column;
+    align-items: center;
   }
 }
 @media screen and (max-width: 767.98px) {
@@ -840,6 +940,8 @@ label {
   .company .container .company-description {
     width: 100%;
     font-size: 16px;
+    line-height: 150%;
+    text-align: justify;
   }
   .company .container .company-img {
     max-width: 326px;
