--- a/style.css
+++ b/style.css
@@ -538,7 +538,7 @@ label {
   position: static;
 }
 
-.advantage {
+.advantages {
   text-align: center;
 }
 
@@ -765,6 +765,9 @@ label {
 .partnership .template-title h2:after {
   background-color: #89c249;
 }
+.partnership .container {
+  margin-bottom: 100px;
+}
 
 .partnership__content {
   display: flex;
@@ -787,6 +790,68 @@ label {
 .partnership__content-item img {
   height: auto;
   max-width: 100%;
+}
+
+.footer__socials img {
+  width: 34px;
+  height: 33px;
+  margin-right: 8px;
+}
+
+.container__footer {
+  display: flex;
+  flex-direction: column;
+  gap: 34px;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  gap: 90px;
+}
+
+.footer__navigation {
+  display: flex;
+  flex-direction: row;
+  gap: 100px;
+}
+
+.footer__list {
+  list-style: none;
+  white-space: nowrap;
+  padding-left: 0;
+}
+.footer__list a {
+  text-align: left;
+  color: #85899c;
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 8px;
+  line-height: 161%;
+}
+
+.footer__title {
+  margin-bottom: 14px;
+  font-size: 20px;
+  font-weight: 700;
+  white-space: nowrap;
+}
+
+.footer__element img {
+  max-width: 1140px;
+  object-fit: cover;
+  max-height: 100%;
+  width: 100%;
+}
+
+.footer__brand p {
+  margin-bottom: 8px;
+  line-height: 163%;
+  font-size: 14px;
+}
+
+.footer__logo img {
+  margin-bottom: 28px;
 }
 
 @media (min-width: 992px) {
@@ -816,6 +881,9 @@ label {
   }
   .bg-accent::before {
     inset: 0 12px;
+  }
+  .footer .container .footer__navigation {
+    gap: 75px;
   }
 }
 @media screen and (max-width: 991.98px) {
@@ -992,6 +1060,23 @@ label {
   }
   .order-mobile-negative {
     order: -1;
+  }
+  .partnership .container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .advantages .container {
+    padding-left: 56px;
+    padding-right: 56px;
+  }
+  .footer .footer__navigation {
+    display: none;
+  }
+  .footer__brand {
+    text-align: center;
+    font-size: 14px;
+    align-items: center;
+    width: 100%;
   }
 }
 @media screen and (max-width: 767.98px) {
