--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ input[type=file] + label, textarea[type=file] + label {
   margin-bottom: 2px;
 }
 input[type=file] + label:hover, textarea[type=file] + label:hover {
-  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%2389C249' stroke-width='2' stroke-dasharray='3px%2c 6px ' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='10' ry='10' stroke='%2389C249' stroke-width='2' stroke-dasharray='8px%2c 10px ' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
 }
 input::placeholder, textarea::placeholder {
   color: #cbcbcb;
@@ -223,8 +223,16 @@ label {
   padding: 12px 27px;
 }
 .btn:hover {
-  background-color: transparent;
-  border-color: #e58d35;
+  background-color: transparent !important;
+  border-color: #e58d35 !important;
+}
+.btn:focus {
+  background-color: transparent !important;
+  border-color: #e58d35 !important;
+}
+.btn:active {
+  background-color: transparent !important;
+  border-color: #e58d35 !important;
 }
 .btn.btn-sm {
   padding: 12px 18px;
@@ -240,12 +248,18 @@ label {
   background-color: transparent;
 }
 .btn.btn-secondary:hover {
-  background-color: #e58d35;
+  background-color: #e58d35 !important;
+}
+.btn.btn-secondary:focus {
+  background-color: #e58d35 !important;
 }
 .btn.btn-primary {
   background-color: #e58d35;
 }
 .btn.btn-primary:hover {
+  background-color: #e58d35;
+}
+.btn.btn-primary:focus {
   background-color: #e58d35;
 }
 
@@ -432,6 +446,9 @@ label {
   color: #fff;
 }
 .nav-link:hover {
+  color: #e58d35;
+}
+.nav-link:focus {
   color: #e58d35;
 }
 
@@ -901,7 +918,7 @@ label {
   .navbar-collapse {
     background-color: #363a4d;
     margin: 0 -12px;
-    padding: 0px 40px;
+    padding: 60px 40px;
     text-align: center;
     transform: translate(0, 12px);
   }
@@ -1085,6 +1102,9 @@ label {
   }
 }
 @media screen and (max-width: 767.98px) {
+  section {
+    margin-bottom: 60px;
+  }
   .calculation-form {
     padding: 52px 30px 34px;
   }
