--- a/style.css
+++ b/style.css
@@ -343,6 +343,7 @@ label {
   border-radius: 10px;
   font-size: 15px;
   line-height: 52px;
+  background-color: #fff;
 }
 .nice-select .list {
   margin-bottom: 0;
